frontend/test/should_fail/enum_model_005.gm
enum te1 {
	a = te2::v,
	b
}

enum te2 {
	u,
	v
}
